<resources>

    <string name="app_name">WildTech</string>
    <string name="hello_register_to_get_started">Hello! Register to get started</string>
    <string name="register_with_one_of_the_following">Register with one of the following.</string>
    <string name="password_note">Password must be at least 8 characters, and contain both letters and numbers.</string>
    <string name="welcome_back">Welcome back! Glad to see you, Again!</string>
    <string name="log_in_with_one_of_the_following">Log in with one of the following.</string>
    <string name="default_web_client_id">76858577824-b36k1rhincj15nj8s3s164nv4uugenvk.apps.googleusercontent.com</string>
    <string name="s1">These are the terms and conditions governing the use of this service and the service and the agreement that operates between you and the company. these terms and condition set out the rights and obligations of all users regarding the use of the service.</string>
    <string name="s2">Your access to and use of the service is conditioned on your acceptance of and compliance with these terms and conditions. these terms and conditions apply to all visitors, users and others who access or use the service.</string>
    <string name="s3">By accessing or using the service you agree to be bound by these terms and conditions. if you disagree with any part of these terms and conditions then you may not access the service.</string>
    <string name="s4">Your access to and use of the service is also conditioned on your acceptance of and compliance with the privacy policy of the company. Our privacy policy describes our policies and procedures on the collection, use and disclosure of your personal information when you use the application or the website and tells you about your privacy rights and how the law protects you. Please read our privacy policy carefully before using our service.</string>
    <string name="s5">Our service allows you to post content. You are responsible for the content that you post to the service, including its legality, reliability, and appropriateness.</string>
    <string name="s6">If you have any questions about these terms and conditions, you can contact ● by sending us an email: wildtechresort@email.com</string>
    <string name="i_agree_to_the_terms"><![CDATA[I agree to the Terms & Conditions]]></string>
    <string name="firebase_link">https://wildtech-b4fc6-default-rtdb.asia-southeast1.firebasedatabase.app/</string>


    <string name="slide_title_1">Discover Your Perfect Getaway</string>
    <string name="slide_title_2">Tailored Experiences, Seamless Booking</string>
    <string name="slide_title_3">Join Us Today</string>

    <string name="slide_descript_1">Explore and book extraordinary resorts and unforgettable escapes with ease. Your dream vacation is just a few taps away</string>
    <string name="slide_descript_2">Personalize your resort experience, from luxurious accommodations to thrilling activities. Booking your dream getaway has never been more convenient with our resort booking app.</string>
    <string name="slide_descript_3">Start your journey to relaxation and adventure. Sign up and begin your resort booking experience. Your paradise awaits!</string>
    <string name="firebase_url">https://wildtech-b4fc6-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>